version/0.20/_sources/api/solver/_autosummary/settings/anisotropic_adaption.rst.txt
:orphan:

.. _anisotropic_adaption:

anisotropic_adaption
====================

.. autoclass:: ansys.fluent.core.solver.settings_241.anisotropic_adaption.anisotropic_adaption
    :show-inheritance:

.. rubric:: Attributes

============================================================   =======================================================================

Attribute                                                                                                                      Summary

============================================================   =======================================================================
:ref:`operations <operations>`                                                         Enter the anisotropic adaption operations menu.

:ref:`iterations <iterations>`                                                                  Set the number of adaption iterations.

:ref:`fixed_zones <fixed_zones>`                                   Set the boundary zones to remain fixed during anisotropic adaption.

:ref:`indicator <indicator>`                                          Set the indicator type and variable(s) for anisotropic adaption.

:ref:`target <target>`                                                         Set the target type and value for anisotropic adaption.

:ref:`maximum_anisotropic_ratio <maximum_anisotropic_ratio>`                      Set the maximum anisotropic ratio for adapted cells.

:ref:`minimum_edge_length <minimum_edge_length_1>`                                                Set the target minimum length scale.

:ref:`minimum_cell_quality <minimum_cell_quality_1>`                       Set the minimum orthogonal quality bound for adapted cells.

============================================================   =======================================================================

.. rubric:: Methods

================================   =================================================================

Method                                                                                       Summary

================================   =================================================================
:ref:`adapt_mesh <adapt_mesh_1>`       Adapt the mesh based on specified anisotropic adaption setup.

================================   =================================================================

.. rubric:: Included in:

==================   =================

Parent                         Summary

==================   =================
:ref:`mesh <mesh>`       'mesh' child.

==================   =================

